# X-Tree

./: .gitignore  CMakeLists.googletest.txt.in  CMakeLists.txt  README.md
cmake/: googletest.cmake
data/: testData  testKNN4  testQueries
src/: Hyperrectangle.hpp  Hyperrectangle.tpp  Interval.hpp  SplitHistory.tpp  XNode.tpp  XTree.hpp  XTree.tpp  changeCap.py  def.h  main.cpp
src/hyperrectangle/: Hyperrectangle.hpp  Hyperrectangle.tpp
src/hyperrectangle/tests/: CMakeLists.txt  hyperrectangle_test.cpp
src/interval/tests/: CMakeLists.txt  interval_test.cpp
src/xtree/: XTree.hpp
src/xtree/tests/: CMakeLists.txt  xtree_test.cpp
tests/: CMakeLists.txt  hyperrectangle_test.cpp  interval_test.cpp  xtree_test.cpp
